--- a/.github/workflows/server-release.yml
+++ b/.github/workflows/server-release.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+      - name: Inject default taplist
+        run: cp src/default-taplist.json public/taplist.json
       - name: Compile TypeScript
         run: npm run build
 
